# CVhomework

./: .gitignore  README.md
Homework1/: CMakeLists.txt  report.md
Homework1/core/: mainBaseline.cpp
Homework2/: CMakeLists.txt  report.md
Homework2/core/: main.cpp  test.cpp
Homework3/: CMakeLists.txt  report.md
Homework3/core/: main.cpp
Homework3/models/: bow_extractor_params.xml  sift_knn_model.xml
